kustomization/assaya-dashboard/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo_website
  name: demo_website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo_website
  template:
    metadata:
      labels:
        app: demo_website
    spec:
      containers:
      - image: httpd_image
        name: httpd
