kustomization/assaya-dashboard/overlays/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: demo_website
  labels:
    app: demo_website
  name: demo_website
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo_website
  type: NodePort
