kustomization/assaya-dashboard/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    kubernetes.io/ingress.class: alb
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: demo_website
  namespace: demo_website
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: demo_website
            port:
              number: 80
        path: /
        pathType: Prefix
